# insights-ai

./: .env  .gitignore  Documentacao.md  README.md  pyproject.toml  pytest.ini
data/: vendas.csv
docs/: AGENTS_TASKS_ARCHITECTURE.md  FLOW_IMPLEMENTATION_ETAPA1.md  FLOW_IMPLEMENTATION_ETAPA2.md  PERFORMANCE_GUIDE.md  TOOLS_DOCUMENTATION.md
examples/: recommendation_engine_demo.py
exemplos_output/: customer_test_report_20250530_181615.md  financeiro_2024.csv  financeiro_90dias.csv  financeiro_semestre.csv  financeiro_ytd.csv  perf_test_análise_completa.csv
output/: dashboard_executivo_integrado.html  index.html  insights_enhanced_v2_20250530_120025.txt  insights_enhanced_v2_20250530_134314.txt  insights_optimized_20250529_153731.txt  insights_optimized_20250529_165513.txt  insights_optimized_20250530_184158.txt  insights_optimized_20250530_185326.txt  resultado_teste_engenheiro_2025-04-27_2025-05-27.txt  teste_correcao.csv  teste_correcao.json  teste_correcao.md  teste_engenheiro_dados_2025-04-27_2025-05-27.md  unified_executive_dashboard_20250527_164128.json  unified_report_comprehensive_report_20250530_133516.html  unified_report_customer_intelligence_20250525_172813.html  unified_report_executive_summary_20250525_172753.html  unified_report_financial_analysis_20250525_172803.html  unified_report_product_performance_20250525_172814.html  unified_report_sales_team_analysis_20250529_125511.html  unified_report_sales_team_analysis_20250530_183955.html
reports/: README.md  Recomendacoes_Estoque_ML.csv  relatorio_engenharia_dados_2025-03-01_2025-05-30.md  (+3 more)
(+724 files in other folders)
